Выкатил массовые доработки

--- a/src/stylesheets/_vars.scss
+++ b/src/stylesheets/_vars.scss
@@ -6,6 +6,6 @@ $green-light: #94c32c;
 $green-dark: #30853a;
 $white-beige: #fafafa;
 $white: #fff;
-$gray-light: rgb(150, 155, 165, 0.9);
+$gray-light: #edf2ef;
 $mustard: #f0c630;
 $reddish: #f05630;
