Пофиксил визуал скроллбара

--- a/src/stylesheets/style.scss
+++ b/src/stylesheets/style.scss
@@ -306,3 +306,11 @@ $hover-scale-options: (
 .row {
 	margin: 0 !important;
 }
+
+.border-none {
+	border: none !important;
+}
+
+.outline-none {
+	outline: none !important;
+}
